# cookiecutter-python

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: build_install.yaml  publish_mkdocs.yml  test.yaml
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/tests/: test_main.py
