[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
packages = [{include = "{{ cookiecutter.project_slug }}"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
